@@ -138,12 +138,6 @@ extern WINDOW *window_make_window (NODE *node);
    or the previous window in the chain if there is no next window. */
 extern void window_delete_window (WINDOW *window);
 
-/* A function to call when the screen changes size, and some windows have
-   to get deleted.  The function is called with the window to be deleted
-   as an argument, and it can't do anything about the window getting deleted;
-   it can only clean up dangling references to that window. */
-extern VFunction *window_deletion_notifier;
-
 /* Set WINDOW to display NODE. */
 extern void window_set_node_of_window (WINDOW *window, NODE *node);
 
